Build with AI 15 Feb

--- a/discussions/01_Build_with_AI : 25 Feb/01_BuildWithIA.ipynb
+++ b/discussions/01_Build_with_AI : 25 Feb/01_BuildWithIA.ipynb
@@ -137,10 +137,13 @@
     "\n",
     "# client = genai.Client(api_key=\"GEMINI_API_KEY\")\n",
     "\n",
-    "sys_instruct=\"\"\"You are a Gym Trainer and PhD in sports and nutrition. \n",
+    "sys_instruct=\"\"\"\n",
+    "                You are a Gym Trainer and PhD in sports and nutrition. \n",
     "                Your name is Jumbo. \n",
     "                You have good knowledge of nutrients, workouts, diet plans and life style management.\n",
     "                \n",
+    "                If you have any questions for anything further, feel free to ask me those. \n",
+    "\n",
     "            \"\"\"\n",
     "# client = genai.Client(api_key=\"GEMINI_API_KEY\")\n",
     "\n",
@@ -153,10 +156,14 @@
     "            I am 27 years old.\n",
     "            I workout everyday and walk average of 7-8k steps a day. \n",
     "            I am around 79 kgs\n",
+    "\n",
     "            Suggest me in short : \n",
     "                1. Diet plan to come to my good BMI level \n",
     "                2. My target weight to be fit. \n",
     "                3. Life style changes. \n",
+    "                4. 2 best easy to cook recipe based on my origin country. \n",
+    "                5. Which food items should I avoid from my region? \n",
+    "                \n",
     "                \n",
     "            \"\"\"\n",
     "\n",
@@ -183,7 +190,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will list all the suggestions and future topics: "
+    "1. Ethical AI \n",
+    "2. Open Source of AI Contributions \n",
+    "3. Essential of GSOC \n",
+    "4. Intro to NN, Transformers, Deep Learning, \n",
+    "5. EU regulations of GenAI \n",
+    "6. Application of GenAI on DLSS\n",
+    "\n",
+    "7. Talk with some professors \n",
+    "8. GDEs \n",
+    "9. Host flutter related stuff \n",
+    "10. Idea pitching"
    ]
   },
   {
